# exercism

./: .gitignore  .travis.yml  README.md
.circleci/: config.yml
clojure/: runtests.sh
cpp/: .gitignore
cpp/hello-world/: hello-world
cpp/lasagna/: lasagna.cpp  lasagna_test.cpp
elixir/: runtests.sh
elixir/list-ops/: list_ops.exs  list_ops_test.exs
elixir/rna-transcription/: mix.exs
elm/hello-world/: HelloWorld.elm
elm/pangram/: Pangram.elm
fsharp/anagram/: Anagram.fs  README.md
fsharp/annalyns-infiltration/: AnnalynsInfiltration.fs
fsharp/log-levels/: LogLevels.fs
fsharp/lucians-luscious-lasagna/: LuciansLusciousLasagna.fs
ocaml/: Makefile  runtests.sh
ocaml/bob/: .merlin  (+4 more)
reasonml/: .gitignore
reasonml/hello-world/: .merlin  Makefile  README.md  hello-world.opam  package-lock.json  test.ml
reasonml/hello-world/.exercism/: metadata.json
reasonml/hello-world/lib/bs/: .bsbuild  .bsdeps  .ninja_log  HelloWorld.cmt  build.ninja
reasonml/hello-world/lib/bs/__tests__/: HelloWorld_test-HelloWorld.cmt  HelloWorld_test.mlast  HelloWorld_test.mlast.d
reasonml/hello-world/lib/bs/src/: HelloWorld-HelloWorld.cmt  HelloWorld-HelloWorld.cmti  HelloWorld.mlast  HelloWorld.mliast
reasonml/phone-number/: .merlin  Phone_number.re  Phone_number.rei  README.md  dune  dune-project  package-lock.json  phone-number.opam
reasonml/phone-number/.exercism/: metadata.json
reasonml/phone-number/__tests__/: PhoneNumber_test.bs.js  PhoneNumber_test.re
reasonml/phone-number/src/: PhoneNumber.bs.js  PhoneNumber.re
ruby/: runtests.sh
rust/: runtests.sh
(+213 files in other folders)
