opam-version: "2.0"
maintainer: "kevgathuku@users.noreply.github.com"
authors: ["Kevin"]

homepage: "https://github.com/kevgathuku/hello-caml"
bug-reports: "https://github.com/kevgathuku/hello-caml/issues"
dev-repo: "git+https://github.com/kevgathuku/hello-caml.git"
version: "dev"

# TODO Pick the relevant SPDX identifier <https://spdx.org/licenses/>
license: "Unlicense"

synopsis: "Exercism hello world exercise"

description: """
Exercism hello world exercise
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "base"
  "dune"
  "reason"
  "rtop"
  "ounit2"
  "ocamlformat"
  "ocaml-lsp-server"
]